--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile 'org.pcap4j:pcap4j-core:1.+'
     compile 'org.pcap4j:pcap4j-packetfactory-static:1.+'
     compile 'ch.qos.logback:logback-classic:1.+'
+    compile 'commons-codec:commons-codec:1.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
